@@ -1,3 +1,7 @@
+* 2014-02-25 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 31191: Fixed erroneous permission check.
+
 * 2014-02-25 - thorben.betten@open-xchange.com
 
  - Fix for bug 31252: Put error arguments into "error_params" field for compatibility reasons
